test/fail_compilation/fail2789a.d

struct S
{
    void myfunc() {}
    int myfunc() { return 0; }
}

void main() {}
